# BoshiInput

./: BoshiCore.py  BoshiInput.py  BoshiInputView.py  CandidateWidget.py  Cargo.toml  CommonTool.py  Config.py  FileConvert.py  GhostText.py  GlobalOverlay.py  InputWidget.py  JsonToBin.py  KeyboardGrab.py  KeyboardInputHandler.py  KeyboardManager.py  KeyboardMove.py  LanguageWidget.py  MainFrame.py  OwlCore.py  QBoshiInput.py  QOwlInput.py  Qapp_setting.py  QfileGenerate.py  ShapeWidget.py  WBoshiInput.py  Wapp_setting.py  WfileGenerate.py  app_setting.py  fileGenerate.py  liu.boi  pyproject.toml  test.py  uni2txt.py
Images/: Boshi.drawio
Q/: BoshiInputApp.py  BoshiInputView.py  InputWidget.py  MainFrame.py  OwlInputApp.py  OwlInputView.py
QT/: BoshiInputApp.py  BoshiInputView.py  CandidateWidget.py  GlobalOverlay.py  InputWidget.py  LanguageWidget.py  MainFrame.py  ShapeWidget.py
Tools/: uni2txt.py
W/: BoshiInputApp.py  BoshiInputView.py  CandidateWidget.py  CommonTool.py  DragEventFilter.py  GhostText.py  GlobalOverlay.py  InputWidget.py  LanguageWidget.py  MainFrame.py  OwlInputApp.py  ShapeWidget.py  TaskBarIcon.py
keyboard/: Cargo.toml
keyboard/src/: lib.rs
src/: lib.rs
