[project]
name = "BoshiInput"
version = "1.0.0"
description = "個人製作的嘸蝦米輸入法"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pynput>=1.8.1",
    "pyside6>=6.11.0",
]

[tool.BoshiInput]
images = "Images"
icon = "Images\\Boshi.ico"
author = "(C) Brad Wu, 2026"
description = "Boshiamy Input"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "ruff>=0.15.10",
]
