[project]
name = "OwlInput"
version = "1.0.0"
description = "個人製作的嘸蝦米輸入法"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.11.0",
    "wxpython>=4.2.5",
]

[tool.OwlInput]
images = "Images"
icon = "Images\\Owl.ico"
author = "(C) Brad Wu, 2026"
description = "Private Boshiamy Input"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "ruff>=0.15.10",
]
